there was a bad assumption that a module was tied to a user when in reality, it should be tied to the request.
remove that assumption.

there is one part of the code that isn't real clean and that is in the
security package where I had to duplicate the methods in SRT for getting
the current module. this can be cleaned up later.

-jon

--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -1,6 +1,6 @@
 
 #macro (viewIssue $currentIssue )
-    #set ($module = $user.CurrentModule)
+    #set ($module = $scarabR.CurrentModule)
     #set ( $canEdit = $security.hasPermission("Issue | Edit", $module) )
     #set ($attrValues = $currentIssue.ModuleAttributeValuesMap)
 
