--- a/src/templates/screens/Search.vm
+++ b/src/templates/screens/Search.vm
@@ -1,5 +1,4 @@
-#set ($user = $data.User)
-#set ($module = $user.CurrentModule)
+#set ($module = $scarabR.CurrentModule)
 
       <div class="app" id="search.vm">
        <h2>custom search (2.2.0.x)</h2>
