--- a/src/templates/screens/secure/SaveQuery.vm
+++ b/src/templates/screens/secure/SaveQuery.vm
@@ -2,6 +2,7 @@
 #set ($query = $scarabR.Query)
 #set ($queryGroup = $intake.Query.mapTo($query)) 
 #set ($user = $data.User)
+#set ($module = $scarabR.CurrentModule)
 #set ($queryString = $data.Parameters.getString("queryString"))
 
       <h2>Save Query</h2>
@@ -42,8 +43,8 @@
 
         <tr>
          <th width="120">location:</th>
-         <td>current project '$user.CurrentModule.Name'</td>
-         <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$user.CurrentModule.ModuleId">
+         <td>current project '$module.Name'</td>
+         <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId">
         </tr>
        </table>
       </div>
