--- a/src/templates/macros/AdvancedQueryMacro.vm
+++ b/src/templates/macros/AdvancedQueryMacro.vm
@@ -1,6 +1,7 @@
 #macro( advancedQuery )
 
 #set ( $search = $scarabR.Search )
+#set ( $intake = $scarabR.getConditionalIntake($scarabG.Constant.CURRENT_QUERY))
 #set ( $query = $intake.SearchIssue.mapTo($search) )
 #set ($attrValues = $search.ModuleAttributeValuesMap)
 
