--- a/src/templates/screens/Login.vm
+++ b/src/templates/screens/Login.vm
@@ -6,7 +6,7 @@
   <li>New users, <a href="$link.setPage("Register.vm")">register here</a>.</li>
  </ul>
  #if ($data.getMessage()) 
- <p>$data.getMessage()</p>
+ <div class="alert">$data.getMessage()</div>
  #end 
  <form action="$link.setPage("Login.vm").addPathInfo($data.Parameters)" method="post" name="login">
   <input type="hidden" name="action" value="Login" /> 
