--- a/src/templates/layouts/Default.vm
+++ b/src/templates/layouts/Default.vm
@@ -17,6 +17,7 @@
     #end
   | <a href="$link.setPage("Links.vm")">Links</a> 
   | <a href="$link.setPage("entry,Wizard1.vm")">Enter Issue</a>
+  | <a href="http://scarab.tigris.org/nonav/ui/">UI Templates</a>
   </p>
    </div>
    <table border="0" cellspacing="0" cellpadding="0" width="95%">
