removed the created_by, modified_by, and dates from issue table.  This info is already being stored in the transaction table.
added a transaction_type table to help differentiate transactions.

added some code to IssueSearch to allow searching for one of several values for
an option attribute (the front end still does not support this, so it has not
been tested).


Issue number:
Obtained from:
Submitted by:
Reviewed by:
Issue number:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/email/MoveIssue.vm
+++ b/src/templates/email/MoveIssue.vm
@@ -5,7 +5,7 @@
   #set ($actionWord = "moved")
 #end
 
-#set ($user = $scarabR.getUser($issue.ModifiedBy.toString()) )
+#set ($user = $issue.ModifiedBy )
 #Issue $issue.UniqueId has just been $actionWord from $oldModule to $newModule by user $user.UserName.
 
 You can view the issue detail at the following URL:
