--- a/src/templates/macros/ViewIssueMacro.vm
+++ b/src/templates/macros/ViewIssueMacro.vm
@@ -94,7 +94,7 @@
        <table width="100%" cellpadding="3" cellspacing="2" border="1">
         <tr>
          <th width="120">committed by:</th>
-        #set ($createdUser = $scarabR.getUser($currentIssue.CreatedBy))
+        #set ($createdUser = $currentIssue.CreatedBy)
          <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
         </tr>
 
