--- a/src/templates/screens/entry/Wizard2.vm
+++ b/src/templates/screens/entry/Wizard2.vm
@@ -245,7 +245,7 @@ $!attVal.Value
 
 
 Reported by:<br>
-#set ( $email = $currentIssue.UserRelatedByCreatedBy.Email )
+#set ( $email = $currentIssue.CreatedBy.Email )
 <A HREF="mailto:$email">$email</A>
 
 
