--- a/src/templates/screens/admin/Approval.vm
+++ b/src/templates/screens/admin/Approval.vm
@@ -8,7 +8,7 @@ $page.setTitle("Admin Approval")
 <input type="hidden" name="action" value="admin.Approval"/>
 <input type="hidden" name="nextTemplate" value="admin,Approval.vm"/>
 
-#if( $module.UnapprovedQueries.isEmpty())
+#if( ($module.UnapprovedQueries.isEmpty()) && ($module.UnapprovedTemplates.isEmpty()) )
   <div class="alert">There are no items to approve.</div>
 #else
 
@@ -46,7 +46,7 @@ $page.setTitle("Admin Approval")
          #end
          <td><input type="checkbox" name="query_id_$query.QueryId" /></td>
 
-         <td>$query.CreatedDate</td>
+         <td>$format.getDate($scarabG.DateFormat, $query.CreatedDate)</td>
 
          <td>query</td>
 
@@ -67,9 +67,7 @@ $page.setTitle("Admin Approval")
 
          <td>#if ($query.Description) $query.Description #else &nbsp; #end</td>
          
-         <td>
-<textarea rows="2" cols="20" name="query_comment_$query.QueryId"></textarea>
-         </td>
+         <td> <textarea rows="2" cols="20" name="query_comment_$query.QueryId"></textarea></td>
          
          <td><select name="query_action_$query.QueryId">
                 <option value="none">no action</option>
@@ -82,29 +80,35 @@ $page.setTitle("Admin Approval")
         </tr>
 #end
 
-<!--
-        <tr class="a">
+#foreach ($template in $module.UnapprovedTemplates)
+
+         #if( $velocityCount % 2 > 0 )
+            <tr class="a">
+         #else 
+            <tr class="b">
+         #end
          <td><input type="checkbox" /></td>
 
-         <td>xx/xx/xxxx</td>
+         <td>$format.getDate($scarabG.DateFormat, $template.CreatedDate)</td>
 
          <td>enter issue template</td>
 
-         <td><a href="#">user@users.com</a></td>
+        #set ($createdUser = $scarabR.getUser($template.UserId))
+        #set ($module = $scarabR.getModule($template.ModuleId.toString()))
+       <input type = "hidden" name="template_user_$template.IssueTemplateId" value = "$createdUser.UserId">
+         <td><a href="mailTo:$createdUser.Email">$createdUser.UserName</a></td>
 
-         <td>Project X.1</td>
-         
+         <td>$module.Name</td>
+
          <td>role X</td>
 
-         <td><a href="#">template X</a></td>
+         <td><a href="#">$template.Name</a></td>
          
-         <td>description X</td>
+         <td>$template.Description</td>
          
-         <td>
-<textarea rows="2" cols="20"></textarea>     
-         </td>
+         <td> <textarea rows="2" cols="20" name="template_comment_$template.IssueTemplateId"></textarea></td>
          
-         <td><select>
+         <td><select name="template_action_$template.IssueTemplateId">
                 <option>no action</option>
                 <option>comment only</option>
                 <option>approve</option>
@@ -113,7 +117,7 @@ $page.setTitle("Admin Approval")
                         
                 </td>
         </tr>
--->
+#end
        </table>
 <div class="axial">
                 <table width="100%" border="1" cellspacing="2" cellpadding="3">
